hphp/test/zend/bad/ext-spl/SplPriorityQueue_insert_invalid_parameter.php
<?php

$h = new SplPriorityQueue();

var_dump($h->insert(NULL));

?>